[package]
name = "monoio_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["client", "http1"] }
monoio = { version = "0.2.3", features = ["poll-io"] }
monoio-compat = { version = "0.2.2", features = ["hyper"] }
num_cpus = "1.16.0"
